--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,89 +1,100 @@
-/* style.css
- * This file provides css styles.
- */
 
-body,html {
-	background-color: #3b4b54; width : 100%;
-	height: 100%;
-	margin: 0 auto;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Arimo);
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
+
+
+header {
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 0px;
+	margin-bottom: 4px;
+	width: 98%;
+	padding: 10px;
+	background-color: #3b50ce;	
+	/* color: #e7e9fd; */
+	color: #ffffff;
+	z-index: 1;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+}
+
+header h1 {
+	font-family: 'Arimo', sans-serif;
+	z-index: 30;
+}
+
+header p, body {
+	font-family: 'Oxygen', sans-serif;
+	font-size: small;
+}
+
+
+header img {
+	opacity: 0.06;
+	z-index: 3;
+	position: absolute;
+	float: right;
+	left: 30%;
+	top: 0px;
+	transform: scale(2.45, 0.7);
+	-moz-transform: scale(2.45, 0.7);
+}
+
+table {
+	width: 99%;
+	margin: 4px;
+}
+
+table td {
+	padding: 4px;
+}
+
+thead {
+	background-color: #006064;
 	color: #ffffff;
 }
 
-a {
-	text-decoration: none;
-	color: #00aed1;
+tbody tr:nth-child(even) {
+	background-color: #b2dfdb;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
-img {
-	padding-top: 10%;
-	display: block;
-	margin: 0 auto;
-	padding-bottom: 2em;
-	max-width:200px;
-}
-
-h1 {
-	font-weight: bold;
-	font-size: 2em;
-}
-
-.leftHalf {
-	float: left;
-	background-color: #26343f;
-	width: 45%;
-	height: 100%;
-}
-
-.rightHalf {
-	float: right;
-	width: 55%;
-	background-color: #313f4a;
-	height: 100%;
-	overflow:auto;
-}
-
-.description {
-	padding-left: 50px;
-	padding-right: 50px;
-	text-align: center;
-	font-size: 1.2em;
-}
-
-.blue {
-	color: #00aed1;
+tbody tr:nth-child(odd) {
+	background-color: #e0f2f1;
 }
 
 
-table {
-	table-layout: fixed;
-	width: 800px;
-	margin: 0 auto;
-	word-wrap: break-word;
-	padding-top:10%;
+#taskBarDiv {
+	padding: 4px;
+	margin: 4px;
 }
 
-th {
-	border-bottom: 1px solid #000;
+#searchDiv {
+	padding: 4px;
+	margin: 4px;
+	position: absolute;
+	left: 70%;
+	top: 6%;
+	z-index: 29;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #e7e9fd;
+	width: 330px;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
 }
 
-th, td {
-	text-align: left;
-	padding: 2px 20px;
+#searchWorkorderQueryField {
+	height: 23px;
+	width: 72%;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
 }
 
-.env-var {
-	text-align: right;
-	border-right: 1px solid #000;
-	width: 30%;
+#messagesDiv {
+	padding: 4px;
+	margin: 4px;
+	background-color: #fff59d;
+	color: #3e2723;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
 }
-
-pre {
-	padding: 0;
-	margin: 0;
-}
-
