Task # 54972 * added add/remove buttons and save button. not functional yet.

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -73,6 +73,10 @@ tbody tr:nth-child(odd) {
 	color: #ffffff;
 }
 
+.dyn-selectable-table tbody {
+	cursor: pointer;
+}
+
 .message-box {
 	padding: 4px;
 	margin: 4px;
