Task # 54972 * added core button functions for main app.

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -68,6 +68,10 @@ tbody tr:nth-child(odd) {
 	background-color: #e0f2f1;
 }
 
+div.container {
+	width: 100%;
+}
+
 .selected {
 	background-color: #03A9F4;
 	color: #ffffff;
