--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,6 +1,6 @@
 
-@import url(http://fonts.googleapis.com/css?family=Arimo);
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
+@import url(https://fonts.googleapis.com/css?family=Arimo);
+@import url(https://fonts.googleapis.com/css?family=Oxygen);
 
 
 header {
