--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -44,6 +44,8 @@ fieldset {
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
 	border-radius: 8px;
+	margin: 4px;
+	padding: 4px;
 }
 
 table {
